# substrate-node-playground

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: check.yml
pallets/playground/: Cargo.toml
pallets/playground/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
